--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-feature
+        android:name="@string/step_detector" android:required="false"/>
+
+    <uses-feature
+        android:name="@string/step_counter" android:required="false"/>
+
     <permission-group
         android:name="android.permission-group.LOCATION"
         android:label="A label for your permission" />
@@ -15,6 +21,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,11 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
-        <activity android:name=".CreatureView"></activity>
-=======
-        <activity android:name=".GetCreatures"></activity>
->>>>>>> 9877c2ebdf1eb46567c78c4341fa26a31a68574d
+        <activity android:name=".CreatureView" />
+        <activity android:name=".GetCreatures" />
+        <activity android:name=".RunningActivity"></activity>
     </application>
 
 </manifest>
