--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
     }
 }
 
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -36,4 +38,8 @@ repositories {
 
 dependencies {
     compile 'com.github.quentin7b:android-location-tracker:3.2'
+}
+
+dependencies {
+    compile 'com.google.android.gms:play-services:10.0.1'
 }
