--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 
     <uses-feature
-        android:name="@string/step_detector" android:required="false"/>
-
+        android:name="@string/step_detector"
+        android:required="false" />
     <uses-feature
-        android:name="@string/step_counter" android:required="false"/>
+        android:name="@string/step_counter"
+        android:required="false" />
 
     <permission-group
         android:name="android.permission-group.LOCATION"
@@ -20,9 +22,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB0XQ66zRadbGdBpX5hU46jkHUuDM-5zPA" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,7 +38,10 @@
         </activity>
         <activity android:name=".CreatureView" />
         <activity android:name=".GetCreatures" />
-        <activity android:name=".RunningActivity"></activity>
+        <activity android:name=".RunningActivity" />
+        <activity android:name=".RunActivity" />
+        <activity android:name=".RunningActivity2" />
+        <activity android:name=".RunSummary"></activity>
     </application>
 
 </manifest>
