--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,3 +43,7 @@ dependencies {
 dependencies {
     compile 'com.google.android.gms:play-services:9.0.1'
 }
+
+dependencies {
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+}
